--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,15 @@
 
     <main>
         <section id="home" class="hero">
+            <div class="hero-slideshow">
+                <div class="hero-slide active" style="background-image: url('assets/images/hero-slide-1.jpg')"></div>
+                <div class="hero-slide" style="background-image: url('assets/images/hero-slide-2.jpg')"></div>
+                <div class="hero-slide" style="background-image: url('assets/images/hero-slide-3.jpg')"></div>
+                <div class="hero-slide" style="background-image: url('assets/images/hero-slide-4.jpg')"></div>
+                <div class="hero-slide" style="background-image: url('assets/images/hero-slide-5.jpg')"></div>
+                <div class="hero-slide" style="background-image: url('assets/images/hero-slide-6.jpg')"></div>
+                <div class="hero-slideshow-overlay"></div>
+            </div>
             <div class="hero-background">
                 <div class="particles-container" id="particles"></div>
                 <div class="animated-shapes">
