--- a/index.html
+++ b/index.html
@@ -364,19 +364,24 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <div class="footer-content">
-          <div class="footer-logo">
-            <img
-              src="src/assets/logos/logo.png"
-              alt="Boardroom TV"
-              class="footer-logo-img"
-            />
+      <div class="footer-inner">
+        <div class="footer-container">
+          <div class="footer-brand">
+            <img src="src/assets/logos/logo.png" alt="Boardroom TV" class="footer-logo-img" />
           </div>
-          <div class="footer-text">
-            <p><strong>Boardroom TV</strong> - Where business meets insights</p>
-            <p>&copy; 2025 Boardroom TV. All rights reserved.</p>
+          <nav class="footer-nav">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#videos">Videos</a>
+            <a href="#contact">Contact</a>
+          </nav>
+          <div class="footer-social">
+            <a href="https://youtube.com/redirect?event=channel_header&redir_token=QUFFLUhqbUlf" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+            <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
           </div>
+        </div>
+        <div class="footer-bottom">
+          <p>&copy; 2025 Boardroom TV. All rights reserved.</p>
         </div>
       </div>
     </footer>
